package com.example.cafe.enums;

public enum OrderStatus {
    CREATED,
    PREPARING,
    READY,
    DELIVERED,
    CANCELLED
}