package com.example.cafe.enums;

public enum PaymentStatus {
    PENDING,
    PAID,
    FAILED
}