@startuml
title Cafe Ordering System - Domain Class Diagram

class User {
  - id: Long
  - fullName: String
  - email: String
  - phone: String
  - password: String
  - role: String
  - orders: List<Order>
}

class Category {
  - id: Long
  - name: String
  - description: String
  - products: List<Product>
}

class Product {
  - id: Long
  - name: String
  - description: String
  - price: double
  - available: boolean
  - category: Category
}

class Order {
  - id: Long
  - createdAt: LocalDateTime
  - status: OrderStatus
  - totalPrice: double
  - user: User
  - items: List<OrderItem>
}

class OrderItem {
  - id: Long
  - quantity: int
  - price: double
  - order: Order
  - product: Product
}

class Payment {
  - id: Long
  - amount: double
  - paymentMethod: String
  - paymentDate: LocalDateTime
  - status: PaymentStatus
  - order: Order
}

class LoginRequest {
  - email: String
  - password: String
}

class CreateOrderRequest {
  - userId: Long
  - items: List<OrderItemRequest>
}

class OrderItemRequest {
  - productId: Long
  - quantity: int
}

enum OrderStatus {
  CREATED
  PREPARING
  READY
  DELIVERED
  CANCELLED
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
}

User "1" -- "0..*" Order : places
Category "1" -- "0..*" Product : contains
Order "1" -- "0..*" OrderItem : contains
Product "1" -- "0..*" OrderItem : selected
Order "1" -- "0..1" Payment : has

Order --> OrderStatus
Payment --> PaymentStatus
CreateOrderRequest "1" -- "1..*" OrderItemRequest

@enduml
